# FEST

./: .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: .gitignore  Dockerfile  README.md  main.py  requirements.txt  websocket.py
backend/api/v1/endpoints/: auth.py  incidents.py  missions.py  robots.py
backend/api/v1/routers/: mqtt.py  routers.py
backend/api/v1/services/: mqtt_service.py
backend/core/: config.py  mqtt_client.py  security.py
backend/db/: base.py  database.py
backend/infra/mqtt/: mqtt_client.py
backend/infra/websocket/: websocket.py
backend/models/: incident.py  mission.py  position.py  robot.py
backend/schemas/: base.py  incident.py  mission.py  robot.py
db-init/: init.sql
frontend/: Dockerfile  package-lock.json  package.json
frontend/fest-frontend/: package.json
frontend/fest-frontend/src/: App.vue  main.js
frontend/fest-frontend/src/components/: RobotPosition.vue
frontend/src/: App.vue  axios.js  main.js  router(old).js
frontend/src/assets/styles/: main.css
frontend/src/components/: MapViewer.vue  PathMapViewer.vue  RobotPosition.vue
frontend/src/components/common/: AlertBox.vue  AlertDialog.vue  StatusBadge.vue
frontend/src/components/layout/: Sidebar.vue  Topbar.vue
frontend/src/components/monitoring/: RobotMap.vue
frontend/src/router/: index.js
frontend/src/services/: api.js  websocket.js
frontend/src/views/: Dashboard.vue  DashboardSimple.vue  IncidentHistory.vue  Login.vue  RobotMonitoring.vue
ros2/: .gitignore  install_dependencies.sh  package-lock.json  requirements.txt
ros2/ros2_ws/: build.bat  error_endpoint.bat  error_fire_suppression_node.bat  run_rqt.bat  run_rviz2.bat  start_goal.bat  start_goal.sh  start_launches.bat  start_launches.sh  start_nodes.bat
ros2/ros2_ws/src/: README.md  start_launches.bat  start_nodes.bat
ros2/ros2_ws/src/auto_driving_cpp/: CMakeLists.txt  README.md  package.xml
ros2/ros2_ws/src/auto_driving_cpp/docs/nodes/: 2_1_global_dijkstra_path.md  2_1_global_path_publisher.md  2_2_local_dijkstra_path.md  2_2_local_path_planner.md  3_follow_unity.md  goal_publisher.md  goal_publisher_auto.md  goal_publisher_manual.md
ros2/ros2_ws/src/auto_driving_cpp/include/auto_driving_cpp/: sample.hpp
ros2/ros2_ws/src/auto_driving_cpp/launch/: integrated_launch.py  unity_dijkstra_launch.py
ros2/ros2_ws/src/auto_driving_cpp/src/: 2_1_global_dijkstra_path.cpp  2_1_global_path_publisher.cpp  2_2_local_dijkstra_path.cpp  2_2_local_path_planner.cpp  2_global_dijkstra_path.cpp  2_local_dijkstra_path.cpp  3_follow_the_carrot_1_no_state.cpp  3_follow_unity.cpp  README.md  goal_publisher.cpp  goal_publisher_auto.cpp  goal_publisher_manual.cpp  my_node.cpp
ros2/ros2_ws/src/auto_package_cpp/: CMakeLists.txt  README.md  package.xml
ros2/ros2_ws/src/auto_package_cpp/include/auto_package_cpp/: file_path.hpp  mqtt_handler.hpp  test.cpp
ros2/ros2_ws/src/auto_package_cpp/launch/: 0_mapping_launch.py  0_routing_launch.py  G_dijkstra_L_dijkstra_launch.py  G_file_L_dijkstra_launch.py  G_file_L_lattice_launch.py  cost_map_path.py  test_cpp_launch.py
ros2/ros2_ws/src/auto_package_cpp/path/: cost_map.pgm  hoom2_path.txt  map_hoom1.pgm  map_hoom2.pgm  test.txt  test_4_hoom2.txt  test_save.txt
ros2/ros2_ws/src/auto_package_cpp/src/: 1.odom_map copy.cpp  1.odom_map.cpp  1_global_cost_map_generator.cpp  1_local_cost_map_generator.cpp  1_odom_node.cpp  1_odom_unity.cpp  2_global_dijkstra_path.cpp  2_global_dijkstra_path_0.cpp  2_global_path_publisher.cpp  2_local_dijkstra_path.cpp  2_local_path_planner.cpp  2_path_publisher.cpp  3_follow_the_carrot.cpp  3_follow_unity.cpp  4_lattice_planner.cpp  5_map_visualizer.cpp  README.md  dijkstra_planner.cpp  goal_publisher.cpp  goal_publisher_0.cpp  goal_publisher_auto.cpp  goal_publisher_manual.cpp  local_cost_map_generator.cpp  make_path.cpp  mapping.cpp  my_node.cpp  test_odom_publisher.cpp
ros2/ros2_ws/src/auto_package_cpp/src/save_file/: 3_follow_the_carrot_0_state.cpp  3_follow_unity_pid(실패).cpp  3_follow_unity_xyz.cpp  3_follow_unity_수정전.cpp  auto_goal_manager(자동갱신불량).cpp  goal_publisher_1_M_A.cpp  goal_publisher_2_AUTO.cpp
ros2/ros2_ws/src/auto_package_cpp/src/utils/: file_path.cpp  mqtt_handler.cpp
ros2/ros2_ws/src/common_utils/: CMakeLists.txt  README.md  package.xml
ros2/ros2_ws/src/common_utils/include/common_utils/: file_path.hpp
ros2/ros2_ws/src/common_utils/src/: file_path.cpp
ros2/ros2_ws/src/fire_control/: package.xml  setup.py
ros2/ros2_ws/src/perception_cpp/: CMakeLists.txt  README.md  package.xml
ros2/ros2_ws/src/perception_cpp/docs/nodes/: 0_1_odom_unity.md  0_2_lidar_filter.md  1_1_cost_map_global.md  1_2_cost_map_local.md  make_path.md  mapping.md
ros2/ros2_ws/src/perception_cpp/include/perception_cpp/: sample.hpp
ros2/ros2_ws/src/perception_cpp/launch/: make_path_launch.py  mapping.launch.py  mapping_launch.py  perception_launch.py
ros2/ros2_ws/src/perception_cpp/map/: cost_map.pgm  map.pgm  map_hoom3.pgm
ros2/ros2_ws/src/perception_cpp/path/: goal_list.txt
ros2/ros2_ws/src/perception_cpp/src/: 0_1_odom_unity.cpp  1_1_cost_map_global.cpp  1_2_cost_map_local.cpp  README.md  cost_map_global.cpp  cost_map_local.cpp  lidar_filter.cpp  make_path.cpp  mapping.cpp  mapping_node.cpp  odom_slam.cpp
ros2/ros2_ws/src/perception_prowler_py/: README.md  package.xml  setup.cfg  setup.py
ros2/ros2_ws/src/perception_py/: README.md  package.xml  requirements.txt  setup.py
ros2/ros2_ws/src/ros2_publish_test/: package.xml  setup.cfg  setup.py
ros2/ros2_ws/src/ros2_publish_test/ros2_publish_test/: mqtt_command_subscriber.py  mqtt_ros2_bridge.py  ros2_mqtt_bridge.py  smooth_position_publisher.py
ros2/ros2_ws/src/test_topic_publisher_py/: package.xml  setup.cfg  setup.py
ros2/ros2_ws/src/topic_bridge_py/: package.xml  setup.cfg  setup.py
ros2/ros2_ws/src/topic_bridge_py/goal/: goal_list.txt
ros2/ros2_ws/src/topic_bridge_py/topic_bridge_py/: 4_control.py  4_control_no_mqtt.py  4_goal_control.py  mqtt_command_subscriber.py  mqtt_ros2_bridge.py  ros2_mqtt_bridge.py
(+23 files in other folders)
